--- a/projeto/emprestimo/templates/emprestimo_contrato.html
+++ b/projeto/emprestimo/templates/emprestimo_contrato.html
@@ -448,7 +448,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${valor_parcela} 
+                        R$ ${"{{ object.juros_ao_mes}}"} 
                     </td>
                 </tr>
             </table>
@@ -775,7 +775,7 @@ window.onload = function imprimir(){
                         ${dia}/${meses[mes-1]}/${ano}
                     </td>
                     <td width="39%">
-                        R$ ${valor_parcela}
+                        R$ ${"{{ object.valor_prestacao}}"}
                 </tr>
             </table>
         `
@@ -807,7 +807,7 @@ window.onload = function imprimir(){
 
         <div class="paragrafo" >
             <strong> CLÁUSULA 1ª. </strong> A integralidade do crédito é composta da seguinte forma: Valor mutuado 
-            R$ ${cap_iof = Number(toFixed(cap_iof, 2))}, Taxa de Juros a.m (9.50)%, taxa de juros moratório 0,66% ao dia, 
+            R$ ${cap_iof = Number(toFixed(cap_iof, 2))}, Taxa de Juros a.m ${"{{ object.juros_ao_mes}}"}%, taxa de juros moratório 0,66% ao dia, 
             multa por atraso: 2%, valor do IOF total: R$ ${iof_real = Number(toFixed(iof_real, 2))}, Valor total 
             devido: R$ ${valor_total_devido}.
         </div>
