correções cliente_cnpj form

--- a/projeto/emprestimo/templates/emprestimo_form.html
+++ b/projeto/emprestimo/templates/emprestimo_form.html
@@ -271,9 +271,9 @@
         document.getElementById('valor_mutuado_info').innerHTML = numberToReal(valor_mutuado)
 
         // LANÇA TAXA DE JUROS AO MÊS
-        var juros_ao_mes = taxa_juros_a_m
-        document.getElementById('juros_ao_mes').value = juros_ao_mes
-        document.getElementById('juros_ao_mes_info').innerHTML = numberToReal(juros_ao_mes)
+        
+        document.getElementById('juros_ao_mes').value = taxa_juros_a_m
+        document.getElementById('juros_ao_mes_info').innerHTML = numberToReal(taxa_juros_a_m)
         
     }
 
